apps/monitoring/base/grafana/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
    spec:
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
      securityContext:
        fsGroup: 472

      containers:
        - name: grafana
          image: grafana/grafana:latest

          ports:
            - name: http
              containerPort: 3000
              protocol: TCP

          volumeMounts:
            - name: grafana-data
              mountPath: /var/lib/grafana

          readinessProbe:
            httpGet:
              path: /api/health
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 6

          livenessProbe:
            httpGet:
              path: /api/health
              port: http
            initialDelaySeconds: 30
            periodSeconds: 20
            timeoutSeconds: 5
            failureThreshold: 6

      volumes:
        - name: grafana-data
          persistentVolumeClaim:
            claimName: grafana-data
